# daily-app

./: Cargo.toml  index.html  stats.txt
frontend/: Cargo.toml  index.html
frontend/src/: fake.rs  lib.rs  router.rs
frontend/src/modules/: mod.rs
frontend/src/modules/home/: index.rs
frontend/src/modules/shared/: components.rs
frontend/src/modules/task/: index.rs  mod.rs
frontend/src/modules/task/components/: edit_task.rs  mod.rs  new_task.rs
server/: Cargo.toml  db.txt  tasks.txt
server/src/: lib.rs  main.rs
src/: lib.rs  main.rs  router.rs
src/modules/: mod.rs
src/modules/shared/: components.rs
