[package]
name = "daily_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
web-sys = { version = "0.3.57", features = ["HtmlInputElement", "HtmlSelectElement"] }
wasm-bindgen = "0.2.80"
serde = "1.0.137"
serde_json = "1.0.79"
yew-router = "0.16.0"
gloo = "0.6.1"
chrono = {version = "0.4.22", features = ["serde"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }